--- a/startbootstrap-modern-business-gh-pages/index.html
+++ b/startbootstrap-modern-business-gh-pages/index.html
@@ -14,6 +14,9 @@
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
+<!-- header color CSS -->
+    <link href="css/ncbs-responsive.css" rel="stylesheet">
+
     <!-- Custom CSS -->
     <link href="css/modern-business.css" rel="stylesheet">
 
@@ -32,10 +35,10 @@
 <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
+    <nav class="navbar navbar-inverse navbar-fixed-top navbar-header-static-top navbar-header-bg_col navbar-header-border-color  " role="navigation">
+        <div class="container  ">
             <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
+            <div class="navbar-header ">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
@@ -43,14 +46,14 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="index.html">
-<img src="ncbs_logo_header.png" alt="logo"style="width:100px;height:35px;"></a>
+<img src="ncbs_logo_header.png" alt="logo" class=img-responsive</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="about.html">About</a>
-                    </li>
+                <ul class="nav navbar-nav navbar-right navbar-header-link-color navbar-header-link-hover-color">
+                    <li >
+                        <a href="about.html" >About</a>
+                     </li>
                     
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Themes <b class="caret"></b></a>
