--- a/startbootstrap-modern-business-gh-pages/about.html
+++ b/startbootstrap-modern-business-gh-pages/about.html
@@ -14,6 +14,10 @@
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
+<!-- header color CSS -->
+    <link href="css/ncbs-responsive.css" rel="stylesheet">
+
+
     <!-- Custom CSS -->
     <link href="css/modern-business.css" rel="stylesheet">
 
@@ -32,7 +36,7 @@
 <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-inverse navbar-header-static-top navbar-header-bg_col  " role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
