--- a/startbootstrap-modern-business-gh-pages/index.html
+++ b/startbootstrap-modern-business-gh-pages/index.html
@@ -35,7 +35,7 @@
 <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-inverse  navbar-header-static-top navbar-header-bg_col  " role="navigation">
+    <nav class="navbar  navbar-header-static-top navbar-header-bg_col  " role="navigation">
         <div class="container  ">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header ">
@@ -54,11 +54,11 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right navbar-header-link-color navbar-header-link-hover-color">
                     <li >
-                        <a href="about.html" >About</a>
+                        <a href="about.html" class="navbar-header-link-color">About</a>
                      </li>
                     
                     <li class="dropdown ">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Themes <b class="caret"></b></a>
+                            <a href="#" class="dropdown-toggle navbar-header-link-color" data-toggle="dropdown">Themes <b class="caret"></b></a>
                         <ul class="dropdown-menu">
 
                             <li>
@@ -98,7 +98,7 @@ Growth</a>
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Sandbox <b class="caret"></b></a>
+                        <a href="#" class="dropdown-toggle navbar-header-link-color" data-toggle="dropdown">Sandbox <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
                                 <a href="blog-home-1.html">Ephemera</a>
