--- a/startbootstrap-modern-business-gh-pages/index.html
+++ b/startbootstrap-modern-business-gh-pages/index.html
@@ -54,7 +54,7 @@
                 </button>
                 <a class="navbar-brand" href="index.html">
 				<div class="logo-responsive">
-				<img src="ncbs_logo_header.png" alt="logo" </a>
+				<img src="ncbs_logo.png" alt="logo" </a>
 					</div>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -69,37 +69,37 @@
                         <ul class="dropdown-menu">
 
                             <li>
-                                <a href="portfolio-1-col.html"> <img src="identity.png" alt="id"style="width:30px;height:30px;">Identity</a>
+                                <a href="portfolio-1-col.html"> <img src="identity.png" alt="id" class="theme-dropdown-icon">Identity</a>
                             </li>
                            <li class="divider"></li> <li>
                                 <a href="portfolio-2-col.html">
-<img src="Institution_Building.png" alt="ib"style="width:30px;height:30px;">
+<img src="Institution_Building.png" alt="ib" class="theme-dropdown-icon">
 Institution Building</a>
                             </li>
 <li class="divider"></li>
                             <li>
                                 <a href="portfolio-3-col.html">
-<img src="growth.png" alt="id"style="width:30px;height:30px;">
+<img src="growth.png" alt="id" class="theme-dropdown-icon">
 Growth</a>
                             </li>
 <li class="divider"></li>
                             <li>
                                 <a href="portfolio-4-col.html">
-<img src="research-1.png" alt="res"style="width:30px;height:30px;">Research</a>
+<img src="research-1.png" alt="res" class="theme-dropdown-icon">Research</a>
                             </li>
 <li class="divider"></li>
                             <li>
                                 <a href="portfolio-item.html">
-<img src="education.png" alt="edu"style="width:30px;height:30px;">Education</a>
+<img src="education.png" alt="edu" class="theme-dropdown-icon">Education</a>
                             </li>
 <li class="divider"></li><li>
                                 <a href="portfolio-item.html">
-<img src="ripple_effect.png" alt="rf"style="width:30px;height:30px;">Ripple Effect</a>
+<img src="ripple_effect.png" alt="rf" class="theme-dropdown-icon">Ripple Effect</a>
                             </li>
 
 <li class="divider"></li><li>
                                 <a href="portfolio-item.html">
-<img src="intersections.png" alt="inter"style="width:30px;height:30px;">Intersection</a>
+<img src="intersections.png" alt="inter" class="theme-dropdown-icon">Intersection</a>
                             </li>
 
                         </ul>
