issue #1 and #2 fixed

--- a/startbootstrap-modern-business-gh-pages/index.html
+++ b/startbootstrap-modern-business-gh-pages/index.html
@@ -36,13 +36,13 @@
 
 </head>
 
-<body>
+<body class="body-scroll-padding">
  
 
     <!-- Navigation -->
 
-    <nav class="navbar  navbar-header-static-top navbar-header-bg_col  " role="navigation">
-        <div class="container  ">
+    <nav class="navbar navbar-inverse navbar-header-static-top navbar-header-bg_col  " role="navigation">
+        <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header ">
 
@@ -170,7 +170,7 @@ Mosaic Template</a>
                     <div class="panel-body home-hero-lefttext-removepadding "  >
 					<!--<div class="col-sm-4">
 					<img src="intro-bg.jpg" alt="bg">
-					</div> -->
+					</div>-->
                         <p align="justify">
 						
 <p>On Oct 22, 1991, the Department of Atomic Energy sent a letter to the Tata Institute for Fundamental Research. 
@@ -188,8 +188,8 @@ It conveyed the President's sanction for a new biology research centre in Bangal
                 </div>
             </div>
             <div class="col-md-8">
-                <!--<div class="panel panel-default">
-                    <div class="panel-heading">
+                <div class="panel panel-background">
+                   <!-- <div class="panel-heading">
                         <h4><i class="fa fa-fw fa-gift"></i></h4>
                     </div>-->
                     <div class="panel-body">
@@ -215,7 +215,7 @@ It conveyed the President's sanction for a new biology research centre in Bangal
         
 
         <!-- Footer -->
-        <footer>
+        <footer class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <div class="text-center" style="margin-top:15px; font-family: roboto;">
