--- a/startbootstrap-modern-business-gh-pages/about.html
+++ b/startbootstrap-modern-business-gh-pages/about.html
@@ -33,13 +33,15 @@
 
 </head>
 
-<body>
+<body class="body-scroll-padding">
 
-    <!-- Navigation -->
-    <nav class="navbar  navbar-header-static-top navbar-header-bg_col  " role="navigation">
+ <!-- Navigation -->
+
+    <nav class="navbar navbar-inverse navbar-header-static-top navbar-header-bg_col  " role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
+            <div class="navbar-header ">
+
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
@@ -47,45 +49,51 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="index.html">
-<img src="ncbs_logo_header.png" alt="logo"style="width:100px;height:35px;"></a>
+                <div class="logo-responsive">
+                <img src="ncbs_logo_header.png" alt="logo" </a>
+                    </div>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
+                <ul class="nav navbar-nav navbar-right navbar-header-link-color navbar-header-link-hover-color">
+                    <li >
                         <a href="about.html" class="navbar-header-link-color">About</a>
-                    </li>
+                     </li>
                     
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle navbar-header-link-color data-toggle="dropdown">Themes <b class="caret"></b></a>
+                    <li class="dropdown ">
+                            <a href="#" class="dropdown-toggle navbar-header-link-color" data-toggle="dropdown">Themes <b class="caret"></b></a>
                         <ul class="dropdown-menu">
+
                             <li>
                                 <a href="portfolio-1-col.html"> <img src="identity.png" alt="id"style="width:30px;height:30px;">Identity</a>
                             </li>
-                            <li>
+                           <li class="divider"></li> <li>
                                 <a href="portfolio-2-col.html">
 <img src="Institution_Building.png" alt="ib"style="width:30px;height:30px;">
 Institution Building</a>
                             </li>
+<li class="divider"></li>
                             <li>
                                 <a href="portfolio-3-col.html">
 <img src="growth.png" alt="id"style="width:30px;height:30px;">
 Growth</a>
                             </li>
+<li class="divider"></li>
                             <li>
                                 <a href="portfolio-4-col.html">
 <img src="research-1.png" alt="res"style="width:30px;height:30px;">Research</a>
                             </li>
+<li class="divider"></li>
                             <li>
                                 <a href="portfolio-item.html">
 <img src="education.png" alt="edu"style="width:30px;height:30px;">Education</a>
                             </li>
-<li>
+<li class="divider"></li><li>
                                 <a href="portfolio-item.html">
 <img src="ripple_effect.png" alt="rf"style="width:30px;height:30px;">Ripple Effect</a>
                             </li>
 
-<li>
+<li class="divider"></li><li>
                                 <a href="portfolio-item.html">
 <img src="intersections.png" alt="inter"style="width:30px;height:30px;">Intersection</a>
                             </li>
@@ -98,21 +106,26 @@ Growth</a>
                             <li>
                                 <a href="blog-home-1.html">Ephemera</a>
                             </li>
+<li class="divider"></li>
                             <li>
                                 <a href="blog-home-2.html">
 Peopleplex</a>
                             </li>
+<li class="divider"></li>
                             <li>
                                 <a href="blog-post.html">Space Tour</a>
                             </li>
+<li class="divider"></li>
  <li>
                                 <a href="blog-home-2.html">
 Timeline</a>
-                            </li>
+                            </li><li class="divider"></li>
+
  <li>
                                 <a href="blog-home-2.html">
 Oral History</a>
                             </li>
+<li class="divider"></li>
  <li>
                                 <a href="blog-home-2.html">
 Mosaic Template</a>
