images folder created and modified css

--- a/startbootstrap-modern-business-gh-pages/index.html
+++ b/startbootstrap-modern-business-gh-pages/index.html
@@ -41,7 +41,7 @@
 
     <!-- Navigation -->
 
-    <nav class="navbar navbar-inverse navbar-header-static-top navbar-header-bg_col  " role="navigation">
+    <nav class="navbar navbar-inverse navbar-header-static-top navbar-header-bg_col" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header ">
@@ -52,9 +52,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">
+                
 				<div class="logo-responsive">
-				<img src="ncbs_logo_header.png" alt="logo" </a>
+				<img src="images/ncbs_logo.png" alt="logo" </a>
 					</div>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -71,7 +71,7 @@
                             <li>
                                 <a href="portfolio-1-col.html"> <img src="identity.png" alt="id"style="width:30px;height:30px;">Identity</a>
                             </li>
-                           <li class="divider"></li> <li>
+                           <li class="divider navbar-dropdown-divider-color"></li> <li>
                                 <a href="portfolio-2-col.html">
 <img src="Institution_Building.png" alt="ib"style="width:30px;height:30px;">
 Institution Building</a>
@@ -196,7 +196,7 @@ It conveyed the President's sanction for a new biology research centre in Bangal
                         
 
 
-                    <img src="insect.png" alt="bg" class="img-responsive">   
+                    <img src="images/insect.png" alt="bg" class="img-responsive">   
 
 
                     </div>
