--- a/startbootstrap-modern-business-gh-pages/about.html
+++ b/startbootstrap-modern-business-gh-pages/about.html
@@ -50,7 +50,7 @@
                 </button>
                 <a class="navbar-brand" href="index.html">
                 <div class="logo-responsive">
-                <img src="ncbs_logo_header.png" alt="logo" </a>
+                <img src="images/ncbs_logo.png" alt="logo" </a>
                     </div>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
