--- a/startbootstrap-modern-business-gh-pages/index.html
+++ b/startbootstrap-modern-business-gh-pages/index.html
@@ -10,6 +10,10 @@
     <meta name="author" content="">
 
     <title>NCBS 25</title>
+	
+	<!-- favicon-->
+	<link  href="images/favicon(3).ico" type="image/x-icon" rel="icon" />
+	
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -46,21 +50,22 @@
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header ">
 
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="ncbs-navabar-collapse">
+                  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
                 
-				<div class="logo-responsive">
+				<div class="logo-responsive ">
 
-				<img src="images/ncbs_logo.png" alt="logo"> </a>
+				<img src="images/ncbs_logo.png" alt="logo" >
+				
 
 					</div>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="ncbs-navabar-collapse">
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right navbar-header-link-color navbar-header-link-hover-color">
                     <li >
                         <a href="about.html" class="navbar-header-link-color">About</a>
