#15, #6 and todays issued are resolved

--- a/startbootstrap-modern-business-gh-pages/index.html
+++ b/startbootstrap-modern-business-gh-pages/index.html
@@ -12,8 +12,6 @@
     <title>NCBS 25</title>
 	
 	<!-- favicon-->
-	
-	
 	<link  href="images/ncbs_favicon.png" type="image/x-icon" rel="icon" sizes="10x10" type="image/png">
 	
 
@@ -47,7 +45,7 @@
 
     <!-- Navigation -->
 
-    <nav class="navbar navbar-inverse navbar-header-static-top navbar-header-bg_col" role="navigation">
+    <nav class="navbar navbar-inverse navbar-default navbar-static-top navbar-header-bg_col" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header ">
@@ -276,7 +274,8 @@ It conveyed the President's sanction for a new biology research centre in Bangal
         <a href="#about" class="footer-content-text">copyright &copy 2016</a>
       </div>
       <div class="text-center footer-content-text">
-        <p>This site is better viewed on a 13-inch screen or larger. Mobile responsiveness in progress.</p>
+        <p>
+		</p>
       </div>
                 </div>
             </div>
