made changes to header elements

--- a/startbootstrap-modern-business-gh-pages/index.html
+++ b/startbootstrap-modern-business-gh-pages/index.html
@@ -73,11 +73,11 @@
                 <ul class="nav navbar-nav navbar-right navbar-header-link-color navbar-header-link-hover-color">
                     <li >
                     
-                        <a href="#about" class="navbar-header-link-color">About</a>
+                        <a href="#about" class="navbar-header-link-color"><b>About</a></b>
                     </li>
                     
                     <li class="dropdown " >
-                            <a href="#" class="dropdown-toggle navbar-header-link-color" data-toggle="dropdown">Themes <b class="caret"></b></a>
+                            <a href="#" class="dropdown-toggle navbar-header-link-color" data-toggle="dropdown"><b>Themes</b> <b class="caret"></b></a>
                         <ul class="dropdown-menu dropdown-menu-style" >
 
                             <li >
@@ -121,7 +121,7 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle navbar-header-link-color" data-toggle="dropdown">Sandbox <b class="caret"></b></a>
+                        <a href="#" class="dropdown-toggle navbar-header-link-color" data-toggle="dropdown"><b>Sandbox</b> <b class="caret"></b></a>
                         <ul class="dropdown-menu dropdown-menu-style" >
                             <li>
                                 <a href="blog-home-1.html">Ephemera</a>
