final index modifications

--- a/startbootstrap-modern-business-gh-pages/index.html
+++ b/startbootstrap-modern-business-gh-pages/index.html
@@ -43,7 +43,7 @@
 
 </head>
 
-<body class="homepage">
+<body>
  
 
     <!-- Navigation -->
@@ -270,7 +270,7 @@ Growth</a>
              <br/>
         </div>
 
-      <div class="text-center about-text-style" >
+      <div class="about-text-style" >
                     
         <div class="row">
             
