insect image modified for small screens

--- a/startbootstrap-modern-business-gh-pages/index.html
+++ b/startbootstrap-modern-business-gh-pages/index.html
@@ -238,10 +238,10 @@ Growth</a>
                     </div>-->
                     <div class="panel-body">
                         
-
+<div class="insect-image">
 
                       <img src="images/insect.png" alt="bg" class="img-responsive">   
-
+</div>
 
                     </div>
 
