dropdown images path and names corrected

--- a/index.html
+++ b/index.html
@@ -90,41 +90,41 @@
                         <ul class="dropdown-menu dropdown-menu-style" >
 
                             <li >
-                                <a href="portfolio-1-col.html"> <img src="identity.png" alt="id" class="theme-dropdown-icon">Identity</a>
+                                <a href="portfolio-1-col.html"> <img src="images/identity_inside-01.png" alt="id" class="theme-dropdown-icon">Identity</a>
                             </li>
                             <li class="divider" >
 					        </li>
 					        <li>
                                 <a href="portfolio-2-col.html">
-                                <img src="Institution_Building.png" alt="ib" class="theme-dropdown-icon">
+                                <img src="images/instituin_inside-01.png" alt="ib" class="theme-dropdown-icon">
                                Institution Building</a>
                             </li>
                              <li class="divider" ></li>
                             <li>
                                 <a href="portfolio-3-col.html">
-                                <img src="growth.png" alt="id" class="theme-dropdown-icon">
+                                <img src="images/growth_inside.png" alt="id" class="theme-dropdown-icon">
                                 Growth</a>
                             </li>
                             <li class="divider"></li>
                             <li>
                                 <a href="portfolio-4-col.html">
-                                <img src="research-1.png" alt="res" class="theme-dropdown-icon">Research</a>
+                                <img src="images/research-inside.png" alt="res" class="theme-dropdown-icon">Research</a>
                             </li>
                             <li class="divider"></li>
                             <li>
                                 <a href="portfolio-item.html">
-                                <img src="education.png" alt="edu" class="theme-dropdown-icon">Education</a>
+                                <img src="images/education_inside1.png" alt="edu" class="theme-dropdown-icon">Education</a>
                             </li>
                             <li class="divider"></li>
                             <li>
                                 <a href="portfolio-item.html">
-                                <img src="ripple_effect.png" alt="rf" class="theme-dropdown-icon">Ripple Effect</a>
+                                <img src="images/ripple_inside.png" alt="rf" class="theme-dropdown-icon">Ripple Effect</a>
                             </li>
 
                             <li class="divider"></li>
                             <li>
                                 <a href="portfolio-item.html">
-                                <img src="intersections.png" alt="inter" class="theme-dropdown-icon">Intersection</a>
+                                <img src="images/intersections_inside.png" alt="inter" class="theme-dropdown-icon">Intersection</a>
                             </li>
 
                         </ul>
