issue #19 closed-Youtube video made dynamic with a videowrapper class and height set to 100%

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 </head>
 
-<body class="homepage">
+<body>
  
 
     <!-- Navigation -->
@@ -284,17 +284,12 @@
         <!--Row-->            
         <div class="row">
             
-
-              <!-- <div class="about-center-block videoWrapper">
-              <iframe width="960" height="200" src="https://www.youtube.com/embed/O8wESXFHZY8" frameborder="0" allowfullscreen></iframe>
-
-              </div>-->
               
             <!--Column grid--> 
-            <div class="col-xs-12">
+           <div class="col-xs-12">
 
             <!--Youtube video--> 
-            <div class="center-block">
+            <div class="center-block videoWrapper">
               <iframe class="theme-about-video" src="https://www.youtube.com/embed/O8wESXFHZY8" frameborder="0" allowfullscreen></iframe>
             <!--/.Youtube video-->  
             </div>
