--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
                 <div class="panel home-hero-lefttext-container " > 
 
-                    <div class="panel-heading home-hero-lefttext-removepadding text-center" >
+                    <div class="panel-heading home-hero-lefttext-removepadding" >
                         <h3> Thirteen ways of looking at NCBS</h3>
                     </div>
 					
@@ -289,7 +289,7 @@
            <div class="col-xs-12">
 
             <!--Youtube video--> 
-            <div class="center-block videoWrapper">
+            <div class="center-block">
               <iframe class="theme-about-video" src="https://www.youtube.com/embed/O8wESXFHZY8" frameborder="0" allowfullscreen></iframe>
             <!--/.Youtube video-->  
             </div>
