--- a/index.html
+++ b/index.html
@@ -85,15 +85,14 @@
                     <!--Menu Themes-->
                     <li class="dropdown " >
 
-                            <a href="#" class="dropdown-toggle navbar-header-link-color" data-toggle="dropdown"><b>Themes</b> <b class="caret"></b></a>
+                        <a href="#" class="dropdown-toggle navbar-header-link-color" data-toggle="dropdown"><b>Themes</b> <b class="caret"></b></a>
 
                         <ul class="dropdown-menu dropdown-menu-style" >
 
                             <li >
                                 <a href="portfolio-1-col.html"> <img src="images/identity_inside-01.png" alt="id" class="theme-dropdown-icon">Identity</a>
                             </li>
-                            <li class="divider" >
-					        </li>
+                            <li class="divider" ></li>
 					        <li>
                                 <a href="portfolio-2-col.html">
                                 <img src="images/instituin_inside-01.png" alt="ib" class="theme-dropdown-icon">
@@ -323,9 +322,6 @@
         <!-- /.row -->   
         </div>
         
-
-
-
       <!--/.About text-->
       </div>
 
@@ -333,7 +329,7 @@
     </div>
     
     <!--Footer-->
-    <footer class="container">
+    <footer class="container-fluid">
 
         <div class="row">
             <div class="col-lg-12">
