issue #23- adding padding-top and bottom of 0px for both the icons growth and research to remove uneven sizing in dropdown menu

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 			        <a href="#" target="">	
 			        <img src="images/ncbs_logo.png" alt="logo" >
 			        </a>
-                <!--/.ncbs log--> 
+                <!--/.ncbs logo--> 
 				</div>
 
             </div>
@@ -101,13 +101,13 @@
                              <li class="divider" ></li>
                             <li>
                                 <a href="portfolio-3-col.html">
-                                <img src="images/growth_inside.png" alt="id" class="theme-dropdown-icon">
+                                <img src="images/growth_inside.png" alt="id" class="theme-dropdown-icon" id="themes-dropdown-growth">
                                 Growth</a>
                             </li>
                             <li class="divider"></li>
                             <li>
                                 <a href="portfolio-4-col.html">
-                                <img src="images/research-inside.png" alt="res" class="theme-dropdown-icon">Research</a>
+                                <img src="images/research-inside.png" alt="res" class="theme-dropdown-icon" id="themes-dropdown-research">Research</a>
                             </li>
                             <li class="divider"></li>
                             <li>
