typo and format correctionm

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>NCBS 25</title>
+    <title>NCBS@25</title>
 	
 	<!-- favicon-->
 	<link  href="images/ncbs_favicon.png" type="image/x-icon" rel="icon" sizes="10x10" type="image/png">
@@ -322,9 +322,9 @@
             <p>Tata Institute of Fundamental Research (TIFR) Archives; and the offices of Architecture and Engineering, IT, Research Development Office, Establishment and Instrumentation, National Centre for Biological Sciences.</p>
             <br/>
             <p>A. Sreenath, Anil Ananthaswamy, George Antony, Aditya Asopa, Savita Ayyar, Champakali Ayyub, B.V. Sreekantan, Prasanta Baruah, Upinder Bhalla, Soumya Bhattacharjee, Aditi Bhattacharya, Chandrashekhar, Chinmayee Chandrashekhara, Sumantra Chattarji, Indira Chowdhury, D. R. Lad, G. Gajendra, Prem Chandra Gautam, Archit Guha, H. Bhagya, H. Krishnamurthy, H. Mohan, Gaiti Hasan, Shobha Jagtap, Mamtha Jaigopal, Jeevaraju, Sudhanshu Jha, Man Mohan Johri, K. S. Vishalakshi, K. Venkataramanathan, K. VijayRaghavan, Pavan Kumar Kaushik, Anubhab Khan, Sudhir Krishna, Anusha Krishnan, Ajith Kumar, Anand Kumar, L. S. Shashidhara, M. S. Swaminathan, Saurabh Mahajan, Priyanka Mathai, Debakshi Mullick, Mathew K Mathew, Satyajit Mayor, Issac F. Murzello, N. Shanthakumary, Rudra Naik, Vidyanand Nanjundiah, Maithreyi Narasimha, Samadhan Narwade, Shannon Olsson, P. Balaram, P. N. Bhavsar, P.P. Divakaran, P. Ranjith, Dasaradhi Palakodeti, Knight Paul Pandian, Mitradas Panicker, R. Chetana, R. Hema, R. Parvathi, R. Sowdhamini, R.D. John, Bhavya Ramakrishnan, Uma Ramakrishnan, Ashok Rao, B. J. Rao, C.N.R. Rao, Satyajit Rath, Krishanu Ray, Oindrila Raychaudhuri, Raj Rewal, S. Savitha, S. N. Basha, Taslimarif Saiyed, Vinaya Sahasrabuddhe, Sanjay Sane, Apurva Sarin, Kalyani Sharma, Shobhona Sharma, Archana Shetty, Dilawar Singh, Ram Naresh Singh, Virendra Singh, Sammitha Sreevathsa, Govind Swarup, T. Eswar, T. J. Felix, T. M. Sahadevan, Krishnapriya Tamma, Mukund Thattai, Parvathi Thangam, Thejaprakash, Deepti Trivedi, Sandip Trivedi, U.B. Poornima, Jayant Udgaonkar, Vidita Vaidya, Shaju Varghese, Veera, Noor Zainab, and the families of K.S. Krishnan and Obaid Siddiqi.</p>
-            <br/>
+            
             <p>Quotes from the following people were excerpted from oral history interviews conducted by Indira Chowdhury. (2002 - 2003). TIFR Archives. Oral History Project, TIFR Oral History Archives: P. Babu, P.K. Maitra, Obaid Siddiqi. Quotes from everyone else were excerpted from interviews that are part of an on-going NCBS Archives oral history project (July 2016 - April 2017). The voices you hear on this page are of a selection of people who generously gave their time to discuss the history of NCBS.</p>
-            <br/>
+            
 
             <p>Designed by D.Epicentre (Sudebi Thakurata, Bharat Joshi, Tanvi Talwar, Saakshita Prabhakar, Probal Banerjee) and Developed by <a href="http://servelots.com/new/3d.html" target="_blank">Janastu</a> (T B Dinesh, Bhanu Prakash, T Pradyumna, A Shalini, Arun Kumar, Khushpreet, Nikitha Bharadwaj, Madhuvanthi, Amrapali)</p><br>
             <p>Feedback about the exhibit or need to get in touch with any of the record owners? 
