--- a/index.html
+++ b/index.html
@@ -6,11 +6,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="title" content="NCBS@25 - Thirteen ways of looking at NCBS">
+    <meta name="description" content="The National Centre for Biological Sciences (NCBS) completes 25 years this year. The NCBS@25 exhibit is built around thirteen ways to reflect upon the history of the institution.">
+    <meta name="author" content="Venkat Srinivasan">
 
     <title>NCBS@25</title>
 	
+    <meta property="og:title" content="NCBS@25"/>
+    <meta property="og:image" content="https://www.ncbs.res.in/ncbs25/img/Assets/ncbs_logo_introtext.png"/>
+    <meta property="og:url" content="https://www.ncbs.res.in/ncbs25/"/>
+    <meta property="og:site_name" content="NCBS@25 - Thirteen ways of looking at NCBS"/>
+    <meta property="og:description" content="The National Centre for Biological Sciences (NCBS) completes 25 years this year. The NCBS@25 exhibit is built around thirteen ways to reflect upon the history of the institution."/>
+        
 	<!-- favicon-->
 	<link  href="images/ncbs_favicon.png" type="image/x-icon" rel="icon" sizes="10x10" type="image/png">
 
